--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,5 +1,6 @@
 body, html {
     height: 100%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #navbar {
@@ -35,9 +36,24 @@ body, html {
 .hero-text h1 {
     color: white !important;
     font-size: 75px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .uk-logo {
-    color:white;
-    font-size: large !important;
+    color: white;
+    font-size: larger !important;
+    font-family: Georgia, 'Times New Roman', Times, serif !important;
+}
+
+.projCon {
+    margin: 100px auto;
+}
+
+.footer {
+    background-color: rgb(0, 0, 31);
+    padding: 40px;
+}
+
+.footer h3, .footer a {
+    color: white !important;
 }
